--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>SIMV</title>
 </head>
 <body>
-    <h1>Sistema Inteligente para Máquina de Vendas</h1>
+    <font face="verdana" color="green">  
+    <h1>Sistema Inteligente para Maquina de Vendas</h1>
+    </font>
 </body>
 </html>
