--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>SIMV</title>
 </head>
 <body>
-    <font face="verdana" color="green">  
+    <center>
+    <font face="verdana" color="green">
     <h1>Sistema Inteligente para Maquina de Vendas</h1>
     </font>
+    </center>
 </body>
 </html>
