--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SIMV</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js">
+  </script>
 </head>
 <body>
     <center>
     <font face="verdana" color="green">
-    <h1>Sistema Inteligente para Maquina de Vendas</h1>
+    <h1>Sistema Inteligente de Maquina de Vendas</h1>
     </font>
     </center>
+     <button id='on'>TESTE 00</button>
+  <button id='off'>TESTE 01</button>
+    
 </body>
 </html>
