--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script>
     client.connect({onSuccess:onConnect , useSSL: true});
     function onConnect() {
-      client.subscribe(""SENAISPTCC/40/SIMV/SENSORTESTE"");
+      client.subscribe("SENAISPTCC/40/SIMV/SENSORTESTE");
       console.log("Conectado");
     }
   </script>
