--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   <script>
     client.onMessageArrived = onMessageArrived;
     function onMessageArrived(message) {
-      console.log("onMessageArrived:");
+    console.log("onMessageArrived:"+message.payloadString);
+    document.getElementById('message').innerText = message.payloadString === 'on' 
     }
   </script>
     
