--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Mensagem do administrador</h1>
     </font>
         <font size="1" face="verdana" color="black">
-  <h1 id='message' class="text-center"></h1>
+  <h1 id='MessageAdmin' class="text-center"></h1>
         </font>
         
     <font face="verdana" color="blue">    
@@ -90,7 +90,7 @@
     
   <script>
     client.onMessageArrived = onMessageArrived;
-    function onMessageArrived(MessageAdmin) {
+    function onMessageArrived(message) {
     console.log("onMessageArrived:"+message.payloadString);
     document.getElementById('MessageAdmin').innerText = message.payloadString 
     }
