--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
   <button id='btn_01'>Pedido de atualização</button>
   </font> 
-        <h1 id-ped_att></h1>
+        <h1 id=ped_att></h1>
         
             <font size="1" face="verdana" color="red">    
       <h1>Mensagem do administrador</h1>
