--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     document.getElementById('MessageAdmin').innerText = message.payloadString 
     }
       
-client.MessageArrived = onMessageArrived;
+client.onMessageArrived = onMessageArrived;
     function onMessageArrived(message) {
-      console.log("onMessageArrived:"+message.payloadString);
-      document.getElementById('pedatt').innerText = message.payloadString === 'pedatt' ? 'Pedido realizado' : '';
+      console.log("onMessageArrived:"+messageatt.payloadString);
+      document.getElementById('pedatt').innerText = messageatt.payloadString === 'pedatt' ? 'Pedido realizado' : '';
   </script>
     
 </body>
