--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     client.connect({onSuccess:onConnect , useSSL: true});
     function onConnect() {
       client.subscribe("SENAISPTCC/40/SIMV/MessageAdmin");
+      client.subscribe("SENAISPTCC/40/SIMV/PedAtt");
       console.log("Conectado");
     }
   </script>
