--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     function onMessageArrived(message) {
     console.log("onMessageArrived:"+message.payloadString);
     document.getElementById('MessageAdmin').innerText = message.payloadString 
+    document.getElementById('pedatt').innerText = message.payloadString === 'pedatt' ? 'Pedido realizado' : '';
     }
   </script>
     
