--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   </script>
 
   <script>
-    client.onMessageArrived = onMessageArrived;
+    client.MessageAdminMessageArrived = MessageAdminMessageArrived;
+    client.VendasMessageArrived = VendasMessageArrived;
       
     
     function MessageAdminMessageArrived(MessageAdmin) {
