--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   </script>
 
   <script>
-    client.onAdminMessageArrived = MessageAdminMessageArrived;
+    client.onAdminMessageArrived = MessageAdmin.onMessageArrived;
       
-    function MessageAdminMessageArrived(MessageAdmin) {
+    function MessageAdmin.onMessageArrived(MessageAdmin) {
     console.log("MessageAdminMessageArrived:"+MessageAdmin.payloadString);
     document.getElementById('MessageAdmin').innerText = MessageAdmin.payloadString 
     }
-    client.onMessageArrived = VendasMessageArrived;  
+    client.onMessageArrived = Vendas.onMessageArrived;  
       
-    function VendasMessageArrived(Vendas) {
+    function Vendas.onMessageArrived(Vendas) {
     console.log("VendasMessageArrived:"+Vendas.payloadString);
     document.getElementById('Vendas').innerText = Vendas.payloadString 
     }
