--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   </script>
 
   <script>
-    client.onAdminMessageArrived = MessageAdmin.onMessageArrived;
+    client.onMessageArrived = onMessageArrived;
       
     function onMessageArrived(MessageAdmin) {
     console.log("MessageAdminMessageArrived:"+MessageAdmin.payloadString);
     document.getElementById('MessageAdmin').innerText = MessageAdmin.payloadString 
     }
-    client.onMessageArrived = Vendas.onMessageArrived;  
+    client.onMessageArrived = onMessageArrived;  
       
     function onMessageArrived(Vendas) {
     console.log("VendasMessageArrived:"+Vendas.payloadString);
