--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
   </script>
 
   <script>
-    client.onMessageArrived = onMessageArrived;
+    MessageAdmin.onMessageArrived = onMessageArrived;
       
     function onMessageArrived(MessageAdmin) {
     console.log("MessageAdminMessageArrived:"+MessageAdmin.payloadString);
     document.getElementById('MessageAdmin').innerText = MessageAdmin.payloadString 
     }
+    Vendas.onMessageArrived = onMessageArrived;
       
     function onMessageArrived(Vendas) {
     console.log("VendasMessageArrived:"+Vendas.payloadString);
