--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
     client.onMessageArrived = onMessageArrived;
       
     function onMessageArrived(MessageAdmin) {
-    console.log("onMessageArrived:"+MessageAdmin.payloadString);
+    console.log("MessageAdmin"+MessageAdmin.payloadString);
     document.getElementById('MessageAdmin').innerText = MessageAdmin.payloadString 
     }
 
     client.onMessageArrived = onMessageArrived;   
          
     function onMessageArrived(Vendas) {
-    console.log("onMessageArrived:"+Vendas.payloadString);
+    console.log("Vendas"+Vendas.payloadString);
     document.getElementById('Vendas').innerText = Vendas.payloadString 
     }
   </script>
