--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
   </tr>
   <tr>
     <td>Total de vendas</td>
-    <td id=Vendas>01</td>
+    <td id=Vendas></td>
   </tr>
   <tr>
     <td>Pedidos - Opção 01</td>
-    <td id=Pedidos01>1</td>
+    <td id=Pedidos01></td>
   </tr>
   <tr>
     <td>Temperatura interna</td>
-    <td id=Temperatura>32º</td>
+    <td id=Temperatura></td>
   </tr>
         
     </center>
