--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   </tr>
   <tr>
     <td>Total de vendas</td>
-    <td id=Vendas></td>  <!-- Definindo váriavel. -->
+    <td id=Vendas><script src="/static/js/app.js" type="text/javascript"></script>
+</div></td>  <!-- Definindo váriavel. -->
   </tr>
   <tr>
     <td>Pedidos - Opção 01</td>
