--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td>Total de vendas</td>
-    <td id=Vendas><script src="/static/js/app.js" type="text/javascript"></script>
+    <td id=Vendas><script src="/app.js" type="text/javascript"></script>
 </div></td>  <!-- Definindo váriavel. -->
   </tr>
   <tr>
