--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>SIMV</title> <!-- Definindo título da página. -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"> <!-- Importando biblioteca (WebSocket) para página. -->
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"
+            type="text/javascript"></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="/static/js/c3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 </head>
     
 <body>
