--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="/static/js/c3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link href="/static/css/c3.min.css" rel="stylesheet" type="text/css">
 </head>
     
 <body>
