--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
     </center>
 
-    <script src="/Vendas.js" type="text/javascript">
+    <script src="/Vendas.js">
     </script>
     
 </body>
