--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </tr>
   <tr>
     <td>Total de vendas</td>
-    <td id=Vendas><script src="/app.js" type="text/javascript"></script>
+    <td id=Vendas></script>
 </div></td>  <!-- Definindo váriavel. -->
   </tr>
   <tr>
@@ -46,6 +46,8 @@
   </tr> <!-- Fim da tabela -->
         
     </center>
+
+<script src="/Vendas.js" type="text/javascript">
     
     <script> <!-- Conectando ao Broker -->
     var wsbroker = "iot.eclipse.org"; <!-- Endereço -->
