--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     
         <!-- Load CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <link href="/static/css/c3.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/c3.min.css" rel="stylesheet" type="text/css">
 
     <!-- Load JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"
             type="text/javascript"></script>
     <style media="screen">
         .app {
-            margin-top: 20px;
         }
         
 </head>
