--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             type="text/javascript"></script>
 
         .app {
-    <script src="/Vendas.js" type="text/javascript">
+    <script src="/VendasApp.js">
         }
         
 </head>
