--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             type="text/javascript"></script>
 
         .app {
-    <script src="/VendasApp.js">
+    <script src="/VendasApp.js" "text/javascript">
         }
         
 </head>
