--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
      
    <script>
    $(document).ready(function(){
+    $("#ler-pagina").load(function(){
+
             $(function(){
                 $("#conteudo-pagina-lida").load("VendasApp.html"); 
    });
