--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      
    <script>
    $(document).ready(function(){
-    $("#ler-pagina").return(function(){
+    $("#ler-pagina").onLoad(function(){
 
             $(function(){
                 $("#conteudo-pagina-lida").load("VendasApp.html"); 
