--- a/VendasApp.html
+++ b/VendasApp.html
@@ -6,6 +6,7 @@
 <title>VendasApp</title>
 <body>
 
+    <script>
     var wsbroker = "iot.eclipse.org"; <!-- Endereço -->
     var wsport = 1883; <!-- Porta -->
     var randomId = parseInt(Math.random() * 100, 10) <!-- Gerador de Id aleatório -->
@@ -23,6 +24,7 @@
     console.log("Vendas: "+Vendas.payloadString); <!-- Envia confirmação ao console -->
     document.getElementById('Vendas').innerText = Vendas.payloadString <!-- Elemento de mensagem, enviando mensagem ao Id -->
     }
-
+    </script>
+    
 </body>
 </html>
