--- a/VendasApp.html
+++ b/VendasApp.html
@@ -6,7 +6,7 @@
 <title>VendasApp</title>
 <body>
 
-   <script> <!-- Conectando ao Broker -->
+   <script> 
     var wsbroker = "iot.eclipse.org"; <!-- Endereço -->
     var wsport = 443; <!-- Porta -->
     var randomId = parseInt(Math.random() * 100, 10) <!-- Gerador de Id aleatório -->
