--- a/VendasApp.html
+++ b/VendasApp.html
@@ -11,7 +11,7 @@
     var wsport = 443; <!-- Porta -->
     var randomId = parseInt(Math.random() * 100, 10) <!-- Gerador de Id aleatório -->
     var client = new Paho.Client(wsbroker, wsport, "myclientid_" + randomId); <!-- Definindo cliente -->
-    client.connect({onSuccess:onConnect , useSSL: true}); <!-- Verificar conexão e certificado -->
+    client.connect({onSuccess:onConnect , useSSL: false}); <!-- Verificar conexão e certificado -->
     
     function onConnect() { <!-- Ativa função de conectar ao broker -->
       client.subscribe("SENAISPTCC/40/SIMV/Vendas"); <!-- Conecta no tópico -->
