--- a/index.html
+++ b/index.html
@@ -36,21 +36,19 @@
     <td id=Temperatura></td>  <!-- Definindo "váriavel -->
   </tr> <!-- Fim da tabela -->
     </center>
-    <script> <!-- Conectando ao Broker -->
-    var wsbroker = "mqtt.dioty.co"; <!-- Endereço -->
-    var wsport = 443 ; <!-- Porta -->
-    var randomId = parseInt(Math.random() * 100, 10) <!-- Gerador de Id aleatório -->
-    var client = new Paho.Client(wsbroker, wsport, "myclientid_" + randomId); <!-- Definindo cliente -->
-    client.connect({onSuccess:onConnect , useSSL: true}); <!-- Verificar conexão e certificado -->
-    function onConnect() { <!-- Ativa função de conectar ao broker -->
-      client.subscribe("/erickdesign13@gmail.com/SENAISPTCC/40/SIMV/Vendas"); <!-- Conecta no tópico -->
-      console.log("Connected!"); <!-- Confirma conexão no console -->
-    }
-    client.onMessageArrived = onMessageArrived;  <!-- Protocolo do websocket --> 
-    function onMessageArrived(Vendas) { <!-- Ativa função de recebimento da mensagem -->
-    console.log("Vendas: "+Vendas.payloadString); <!-- Envia confirmação ao console -->
-    document.getElementById('Vendas').innerText = Vendas.payloadString <!-- Elemento de mensagem, enviando mensagem ao Id -->
-    }
+
+<script src="./browserMqtt.js"></script>
+<script>
+  var client = mqtt.connect() // you add a ws:// url here
+  client.subscribe("mqtt/demo")
+
+  client.on("message", function (topic, payload) {
+    alert([topic, payload].join(": "))
+    client.end()
+  })
+
+  client.publish("mqtt/demo", "hello world!")
+</script>
   </script>
 </body>
 </html>
