--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Definindo escala de resolução (responsivo). -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!-- Ativando compatibilidade e HTTP (Padrão). -->
     <title>SIMV</title> <!-- Definindo título da página. -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"> <!-- Importando biblioteca (WebSocket) para página. -->
+  <script src="<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>"> <!-- Importando biblioteca (WebSocket) para página. -->
   </script>
 </head>
 
