--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
 
     <script> <!-- Conectando ao Broker -->
    // Create a client instance
-client = new Paho.MQTT.Client(mqtt.dioty.co, Number(8080), "clientId");
+client = new Paho.MQTT.Client(location.hostname, Number(location.port), "clientId");
+   	var ClientImpl = function (uri, host, port, path, clientId) {
+		// Check dependencies are satisfied in this browser.
+		if (!("WebSocket" in global && global.WebSocket !== null)) {
+			throw new Error(format(ERROR.UNSUPPORTED, ["WebSocket"]));
+		}
+		if (!("localStorage" in global && global.localStorage !== null)) {
+			throw new Error(format(ERROR.UNSUPPORTED, ["localStorage"]));
+		}
+		if (!("ArrayBuffer" in global && global.ArrayBuffer !== null)) {
+			throw new Error(format(ERROR.UNSUPPORTED, ["ArrayBuffer"]));
+		}
+		this._trace("Paho.MQTT.Client", host, port);
+		this.host = mqtt.dioty.co;
+		this.port = 8080;
 
 // set callback handlers
 client.onConnectionLost = onConnectionLost;
