--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ function onMessageArrived(message) {
 			throw new Error(format(ERROR.UNSUPPORTED, ["ArrayBuffer"]));
 		}
 		this._trace("Paho.MQTT.Client", uri, host, port, path, clientId);
-		this.host = host;
-		this.port = port;
+		this.host = /erickdesign13@gmail.com/SENAISPTCC/40/SIMV/Vendas;
+		this.port = 8080;
 		this.path = path;
 		this.uri = uri;
 		this.clientId = clientId;
