--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function onMessageArrived(message) {
 			throw new Error(format(ERROR.UNSUPPORTED, ["ArrayBuffer"]));
 		}
 		this._trace("Paho.MQTT.Client", uri, host, port, path, clientId);
-		this.host = /erickdesign13@gmail.com/SENAISPTCC/40/SIMV/Vendas;
+		this.host = mqtt.dioty.co;
 		this.port = 8080;
 		this.path = path;
 		this.uri = uri;
