--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <script>
    // Create a client instance
 client = new Paho.MQTT.Client(location.hostname, Number(location.port), "clientId");
-location.hostname = /erickdesign13@gmail.com/SENAISPTCC/40/SIMV/Vendas;
+location.hostname = mqtt.dioty.co;
 	location.port = 8080;
 // set callback handlers
 client.onConnectionLost = onConnectionLost;
