--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>HostokApp</title>
 	</head>
 	<body>
-		<h1>Hello World<h1>
+		<center>
+			<h1>Hello World<h1>
+		</center>
 	</body>
 </html>
